[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/System/ButtonUF.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontStd.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.51572, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.51572, 1 ),
"update": 0,
"values": [ Vector2( 55, 15 ), Vector2( 55, 15 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Select"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:idle_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, -1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:idle_y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:hover_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hover_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 55, 15 )

[node name="Button" type="Polygon2D"]
position = Vector2( 104, 104 )
z_index = 1500
color = Color( 0, 0, 0, 1 )
offset = Vector2( -55, -15 )
antialiased = true
polygon = PoolVector2Array( 0, 30, 110, 30, 110, 0, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
button_text = "Button"
idle_x = 0.381836
idle_y = 0.800781

[node name="Label" type="Label" parent="."]
margin_left = -184.0
margin_top = -8.0
margin_right = 186.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.486275, 0.639216, 1, 1 )
text = "Wow, what a so very long question this is! How convenient!"
align = 1

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )
anims/Disappear = SubResource( 2 )
anims/Select = SubResource( 3 )

[node name="AnimationPlayerIdle" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 4 )

[node name="AnimationPlayerHover" type="AnimationPlayer" parent="."]
anims/Hover = SubResource( 5 )

[node name="AreaHover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHover"]
shape = SubResource( 6 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="AreaHover" to="." method="_on_AreaHover_mouse_entered"]
[connection signal="mouse_exited" from="AreaHover" to="." method="_on_AreaHover_mouse_exited"]
